--- a/src/app/components/mainArticle/MainArticle.module.css
+++ b/src/app/components/mainArticle/MainArticle.module.css
@@ -3,6 +3,7 @@
     max-width: 900px;
     display: flex;
     align-items: center;
+    text-align: center;
     justify-content: space-around;
     gap: 2rem;
     font-size: 1.5rem;
