--- a/src/app/components/nightArticle/NightArticle.module.css
+++ b/src/app/components/nightArticle/NightArticle.module.css
@@ -9,6 +9,7 @@
     gap: 2rem;
     font-size: 1.75rem;
     line-height: 2.5rem;
+    text-align: center;
     font-family: 'roboto';
 }
 .main p {
