--- a/src/app/components/reuse/Article.module.css
+++ b/src/app/components/reuse/Article.module.css
@@ -6,7 +6,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
     border: 0.3rem solid #226697;
     font-size: 0.9rem;
     height: 400px;
@@ -14,7 +13,7 @@
     background-color: #99abc0;
     text-align: center;
     border-radius: 0.5rem;
-    gap: 2rem;
+    gap: 1rem;
     padding-top: 1rem;
     pointer-events: none;
 }
@@ -24,7 +23,7 @@
     background-color: #99a0c0;
 }
 .gameTitle{
-    font-size: 1rem;
+    font-size: 1.25rem;
     font-weight: bold;
     color: rgb(19, 18, 63);
 }
@@ -42,6 +41,12 @@
 }
 .image{
     border-radius: 1rem;
+}
+.textInfo{
+    display: flex;
+    flex-direction: column;
+    height: 110%;
+    width: 90%;
 }
 
 
